--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
                 Pour illustrer ces propos et clore cette page, une dernière phrase que j'avais adoré:
             </p>
-        <q> "Nous avons accès en permanence à la quasi-totalité savoir de l'humanité <br>
+        <q> "Nous avons accès en permanence à la quasi-totalité du savoir de l'humanité <br>
                 et nous passons notre temps à nous des échanger des images de châtons"</q>
                 <h6>auteur inconnu</h6> 
 
