new version with columns and adapted content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bonjour Christelle</title>
+        <title>Bonjour Alex</title>
         <link rel="shortcut icon" href="./html-logo.png">
         <link rel="stylesheet" href="style.css" />
         
@@ -16,6 +16,7 @@
                 je suis décidé à me former pour développer des applications et sites internet.
                 Je découvre ainsi différents langages méthodes au travers de tutoriels qui montrent
                 que les chemins pour arriver à ses fins sont multiples. 
+            </p>
             <p>
                 Comme je suis agé maintenant de 31 ans, je suis assez sage pour ne plus avoir peur
                 de l'écart d'expérience qu'il va y avoir avec la jeune génération qui apprend à coder 
@@ -26,30 +27,19 @@
             <p>
                 Voilà un dicton qui me permet de croire que je serai à ma place dans le développement
                 dans un premier temps avec HTML, CSS et Javascript puis je l'espère, avoir le courage 
-                de me plonger dans la programmation avec python et C++ dans un second temps pour la 
-                conception et le développement d'applications. 
+                de me plonger dans la programmation avec python et C et C++ dans un second temps pour la 
+                conception et le développement logiciel. 
             </p>
-            <h3>Une Roadmap bien maigrichonne:</h3>
-            <p>
-                Elle s'étoffe chaque jour avec ce que je peux apprendre de nouveau sur les utilités du code.
-                J'aurai ambitionné de rejoindre le parcours d'alternance mais je crois devoir passer par la 
-                formation socle avant tout, pour reposer sur des bases solides afin de poursuivre avec une 
-                ambition sociale, d'accessibilité et de justesse.<br>
-                De plus, en étant très isolé géographiquement et sans vehicule je suis plus à l'aise avec l'idée
-                d'apprendre depuis chez moi. Je souhaiterais avoir un avis d'experte sur le meilleur parcours à
-                suivre comme je suis votre apprenant attitré.
-            
-                Pour illustrer ces propos et clore cette page, une dernière phrase que j'avais adoré:
+            <h3>Une Roadmap bien maigrichonne, mais il faut un début à tout</h3>
             </p>
         <q> "Nous avons accès en permanence à la quasi-totalité du savoir de l'humanité <br>
                 et nous passons notre temps à nous des échanger des images de châtons"</q>
                 <h6>auteur inconnu</h6> 
 
-                <p>Merci de m'avoir lu, retrouvons-nous sur Slack</p>
+                <p>Merci d'avoir accepté mon de stage</p>
         </div>
         <header>
-            <h1>Mais quelle formation <br>
-            Choisir chez Oclock?</h1>
+            <h1> Merci Alex</h1>
         </header>
     </body>
 </html>
